Fix Example Boilerplate (#3049)
* docs: write tsconfig for typescript examples; update react-scripts version

* docs: clean examples before processing them

* docs: correct sample boilerplate

* chore: cut semver

* chore: update yarn.lock

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,8 +5,8 @@ changesetBaseRefs:
 
 changesetIgnorePatterns:
   - '**/*.spec.{js,ts,tsx}'
-  - 'packages/docsite/**'
-  - 'packages/build/**'
+  - packages/docsite/**
+  - packages/build/**
 
 packageExtensions:
   alex@*:
