--- a/packages/react-dnd/package.json
+++ b/packages/react-dnd/package.json
@@ -32,6 +32,7 @@
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/node": "^14.14.30",
     "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "gulp": "^4.0.2",
     "react": "^17.0.1",
     "react-dnd-test-backend": "portal:../backend-test",
