--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -28,3 +28,5 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
 
 yarnPath: .yarn/releases/yarn-2.4.0.cjs
+
+npmAuthToken: '${NPM_AUTH_TOKEN-emptytoken}'
