--- a/.github/workflows/fix-dependabot.yml
+++ b/.github/workflows/fix-dependabot.yml
@@ -24,14 +24,14 @@ jobs:
         run: |
           yarn install
 
-      # - name: Config Git
-      #   run: |
-      #     # use personal access token to allow triggering new workflow
-      #     BASIC_AUTH=$(echo -n "x-access-token:${{ secrets.GITHUB_TOKEN }}" | base64)
-      #     echo "::add-mask::$BASIC_AUTH"
-      #     git config --global user.name '${{ github.event.commits[0].author.name }}'
-      #     git config --global user.email '${{ github.event.commits[0].author.email }}'
-      #     git config --local http.$GITHUB_SERVER_URL/.extraheader "AUTHORIZATION: basic $BASIC_AUTH"
+      - name: Config Git
+        run: |
+          # use personal access token to allow triggering new workflow
+          BASIC_AUTH=$(echo -n "x-access-token:${{ secrets.GITHUB_TOKEN }}" | base64)
+          echo "::add-mask::$BASIC_AUTH"
+          git config --global user.name '${{ github.event.commits[0].author.name }}'
+          git config --global user.email '${{ github.event.commits[0].author.email }}'
+          git config --local http.$GITHUB_SERVER_URL/.extraheader "AUTHORIZATION: basic $BASIC_AUTH"
 
       - name: Commit changes
         run: |
