--- a/.github/workflows/fix-dependabot.yml
+++ b/.github/workflows/fix-dependabot.yml
@@ -32,18 +32,5 @@ jobs:
           git config --local http.$GITHUB_SERVER_URL/.extraheader "AUTHORIZATION: basic $BASIC_AUTH"
 
       - name: Commit changes
-        shell: bash
         run: |
-          git diff-index --quiet HEAD
-          result=$?
-
-          set -e
-          if [ result == 0 ]
-          then
-            echo "no changes detected"  
-          else
-            echo "changes detected"
-            git add yarn.lock .yarn/cache .pnp.*
-            git commit -m "Dependabot autofix"
-            git push
-          fi
+          ./scripts/dependabot-autofix.sh
