--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: yarn version check
-        if: "github.actor != 'dependabot-preview[bot]' && !contains(github.ref , 'release/') && !contains(github.head_ref , 'release/')"
+        if: "github.actor != 'dependabot[bot]' && !contains(github.ref , 'release/') && !contains(github.head_ref , 'release/')"
         name: Version Check
 
       - run: yarn install
@@ -45,7 +45,7 @@ jobs:
 
       - name: auto-merge
         # Because the fix-dependabot.yml worfklow uses my own PAT to patch dependabot updates
-        if: (github.actor == 'dependabot-preview[bot]' || github.actor == 'darthtrevino') && contains(github.ref, 'dependabot/npm_and_yarn')
+        if: (github.actor == 'dependabot[bot]' || github.actor == 'darthtrevino') && contains(github.ref, 'dependabot/npm_and_yarn')
         uses: ridedott/merge-me-action@v1
         with:
           # This must be used as GitHub Actions token does not support
