Fix hooks example; upgrade libs (#3111)
* fix: example; upgrade libs

* chore: cut semver

* chore: upgrade yarn.lock

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,7 @@
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:@typescript-eslint/recommended",
-		"prettier",
-		"prettier/@typescript-eslint"
+		"prettier"
 	],
 	"settings": {
 		"react": {
