--- a/packages/react-dnd/package.json
+++ b/packages/react-dnd/package.json
@@ -24,6 +24,7 @@
     "@react-dnd/invariant": "^2.0.0",
     "@react-dnd/shallowequal": "^2.0.0",
     "dnd-core": "workspace:packages/dnd-core",
+    "fast-deep-equal": "^3.1.3",
     "hoist-non-react-statics": "^3.3.2"
   },
   "devDependencies": {
