Task/upgrade ts yarn (#3283)
* use yarn 3

* remove dependabot

* update build tooling

* cut semver doc

* upgrade yarn sdks, run prettier

* update pkg.json

* ci: remove pretty-quick

* chore: update prettier

* ci: clean up scripts

* chore: run prettier

* chore: update prettierignore

* ci: update ignorefiles

* chore: update semver

* ci: add node 16.x

* ci: remove automerge step

* ci: update git-is-clean

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,11 @@
+.yarn/
 **/node_modules/
-**/lib/
 **/dist/
+**/lib/
+**/build/
 **/public/
 **/static/
-packages/documentation/cra-test/build/
+**/.cache/
+**/coverage/
 .pnp.js
-.yarn/
+.pnp.cjs
