--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 node_modules/
 packages/*/dist
 packages/*/lib
+
+# Docsite Artifacts
+packages/docsite/public
+packages/docsite/.cache
+packages/docsite/static/examples_hooks_js
+packages/docsite/static/examples_hooks_ts
+packages/docsite/static/examples_decorators_js
+packages/docsite/static/examples_decorators_ts
+
 __site__
 __site_prerender__
 
