--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,4 @@
 {
-  "*.{ts,tsx}": ["eslint --fix", "prettier"]
+  "*.{md,json}": ["prettier --write"],
+  "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"]
 }
