--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [12.x, 14.x, 16.x]
 
     steps:
       - uses: actions/checkout@v1
@@ -33,22 +33,23 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-  # This is a separate step to allow for the full matrix build to complete
-  auto-merge:
-    name: Auto-Merge Dependabot PRs
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-      - name: check actor
-        run: echo "actor is $GITHUB_ACTOR"
-
-      - name: auto-merge
-        # Because the fix-dependabot.yml worfklow uses my own PAT to patch dependabot updates
-        if: (github.actor == 'dependabot[bot]' || github.actor == 'darthtrevino') && contains(github.ref, 'dependabot/npm_and_yarn')
-        uses: ridedott/merge-me-action@v1
-        with:
-          # This must be used as GitHub Actions token does not support
-          # pushing to protected branches.
-          GITHUB_LOGIN: darthtrevino
-          GITHUB_TOKEN: ${{ secrets.AUTOMERGE_PAT }}
+# TODO: reconsider using this when dependabot supports yarn 2+
+# This is a separate step to allow for the full matrix build to complete
+#  auto-merge:
+#    name: Auto-Merge Dependabot PRs
+#    runs-on: ubuntu-latest
+#    needs:
+#      - build
+#    steps:
+#      - name: check actor
+#        run: echo "actor is $GITHUB_ACTOR"
+#
+#      - name: auto-merge
+#        # Because the fix-dependabot.yml worfklow uses my own PAT to patch dependabot updates
+#        if: (github.actor == 'dependabot[bot]' || github.actor == 'darthtrevino') && contains(github.ref, 'dependabot/npm_and_yarn')
+#        uses: ridedott/merge-me-action@v1
+#        with:
+#          # This must be used as GitHub Actions token does not support
+#          # pushing to protected branches.
+#          GITHUB_LOGIN: darthtrevino
+#          GITHUB_TOKEN: ${{ secrets.AUTOMERGE_PAT }}
