--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,9 +4,13 @@ changesetBaseRefs:
   - upstream/main
 
 changesetIgnorePatterns:
-  - '**/*.spec.{js,ts,tsx}'
+  - "**/*.spec.{js,ts,tsx}"
   - packages/docsite/**
   - packages/build/**
+
+enableInlineHunks: true
+
+npmAuthToken: "${NPM_AUTH_TOKEN-emptytoken}"
 
 packageExtensions:
   alex@*:
@@ -14,19 +18,17 @@ packageExtensions:
       supports-color: ^7.2.0
   gatsby@*:
     dependencies:
-      '@babel/types': ^7.12.0
+      "@babel/types": ^7.12.0
       babel-plugin-styled-components: ^1.11.1
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: '@yarnpkg/plugin-workspace-tools'
+    spec: "@yarnpkg/plugin-workspace-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
+    spec: "@yarnpkg/plugin-interactive-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: '@yarnpkg/plugin-version'
+    spec: "@yarnpkg/plugin-version"
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: '@yarnpkg/plugin-typescript'
+    spec: "@yarnpkg/plugin-typescript"
 
-yarnPath: .yarn/releases/yarn-2.4.0.cjs
-
-npmAuthToken: '${NPM_AUTH_TOKEN-emptytoken}'
+yarnPath: .yarn/releases/yarn-3.0.0.cjs
