--- a/package.json
+++ b/package.json
@@ -37,55 +37,51 @@
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
     "preinstall": "npx only-allow yarn",
-    "clean:all": "yarn workspaces foreach --exclude @react-dnd/build -pv run clean",
-    "build:all": "yarn workspaces foreach -pv --topological-dev run build",
-    "test:all": "yarn workspaces foreach -pv run test",
-    "release:all": "yarn workspaces foreach -pv --exclude 'react-dnd-parent' --exclude '@react-dnd/build' --exclude 'react-dnd-documentation' --exclude 'react-dnd-examples-hooks' --exclude 'react-dnd-examples-decorators' -pv npm publish --tolerate-republish",
-    "lint": "run-s 'lint:*'",
-    "jest": "jest",
-    "jest:watch": "jest --watch",
-    "jest:coverage": "jest --coverage",
+    "clean:": "yarn workspaces foreach --exclude @react-dnd/build -pv run clean",
+    "build:": "yarn workspaces foreach -pv --topological-dev run build",
+    "test:": "yarn workspaces foreach -pv run test",
+    "watch:": "yarn workspaces foreach -pvi run watch",
+    "release:": "yarn workspaces foreach -pv --exclude 'react-dnd-parent' --exclude '@react-dnd/build' --exclude 'react-dnd-documentation' --exclude 'react-dnd-examples-hooks' --exclude 'react-dnd-examples-decorators' -pv npm publish --tolerate-republish",
+    "lint:": "run-s 'lint:*'",
+    "test:unit": "jest --coverage",
     "lint:code": "eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:spelling": "mdspell 'packages/documentation/docsite/markdown/**/*.md' --en-us --report",
     "lint:tone": "alex .",
-    "lint:formatting": "pretty-quick --check",
+    "lint:formatting": "prettier --check \"**/*.(ts|tsx|js|json|md)\"",
     "build_docsite": "yarn build:docsite",
+    "format:": "prettier --write \"**/*.(ts|tsx|js|json|md)\"",
     "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0",
-    "ci": "npm-run-all -s build:all -p test:all lint jest:coverage build_docsite -s git-is-clean",
-    "prettify:source": "prettier 'packages/*/*/src/**/*.ts*'",
-    "prettify": "pretty-quick --fix",
-    "precommit:lint": "lint-staged",
-    "precommit:format": "pretty-quick --staged",
-    "watch": "yarn workspaces foreach -pvi run watch",
-    "git-is-clean": "git diff-index --quiet HEAD"
+    "ci": "run-s build: test: lint: test:unit build_docsite git-is-clean",
+    "precommit": "lint-staged",
+    "git-is-clean": "git status && git diff-index HEAD"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/node": "^14.17.9",
+    "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
     "@types/testing-library__jest-dom": "^5.9.5",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "alex": "^9.1.0",
     "conventional-changelog-cli": "^2.1.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
     "inquirer": "^7.3.3",
@@ -94,18 +90,17 @@
     "lint-staged": "^10.5.4",
     "markdown-spellcheck": "^1.3.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
+    "prettier": "^2.3.2",
     "react-dnd": "workspace:packages/react-dnd",
     "react-dnd-html5-backend": "workspace:packages/backend-html5",
     "react-dnd-test-backend": "workspace:packages/backend-test",
     "react-dnd-test-utils": "workspace:packages/test-utils",
     "react-dnd-touch-backend": "workspace:packages/backend-touch",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.5"
+    "typescript": "^4.3.5"
   },
   "resolutions": {
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.1"
+    "@types/react": "17.0.17",
+    "@types/react-dom": "17.0.9"
   }
 }
