--- a/packages/dnd-core/package.json
+++ b/packages/dnd-core/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "@react-dnd/build": "workspace:packages/build",
+    "@types/setimmediate": "^1.0.2",
     "gulp": "^4.0.2",
-    "react-dnd-test-backend": "portal:../backend-test"
+    "react-dnd-test-backend": "portal:../backend-test",
+    "setimmediate": "^1.0.5"
   }
 }
