update docsite build action (#3306)

--- a/.github/workflows/docsite.yml
+++ b/.github/workflows/docsite.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 12.x
 
       - run: yarn install
-      - run: yarn build:all
+      - run: 'yarn build:'
       - run: yarn build:docsite
 
       - name: deploy
