fix(DndProvider): Add explicit types for children (#3311)
* fix(DndProvider): Add explicit types for children

* chore: explicitly mark children prop across repository

* ci: clean up ci.yml

* run yarn version check

* ci: update husky scripts

Co-authored-by: Chris Trevino <chtrevin@microsoft.com>

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
-    "preinstall": "npx only-allow yarn",
+    "preinstall": "npx only-allow yarn && yarn husky install",
     "clean:": "yarn workspaces foreach --exclude @react-dnd/build -pv run clean",
     "build:": "yarn workspaces foreach -pv --topological-dev run build",
     "test:": "yarn workspaces foreach -pv run test",
