--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,9 @@ jobs:
         node-version: [12.x, 14.x, 16.x]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -32,24 +34,3 @@ jobs:
         if: success() && matrix.node-version == '14.x'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-# TODO: reconsider using this when dependabot supports yarn 2+
-# This is a separate step to allow for the full matrix build to complete
-#  auto-merge:
-#    name: Auto-Merge Dependabot PRs
-#    runs-on: ubuntu-latest
-#    needs:
-#      - build
-#    steps:
-#      - name: check actor
-#        run: echo "actor is $GITHUB_ACTOR"
-#
-#      - name: auto-merge
-#        # Because the fix-dependabot.yml worfklow uses my own PAT to patch dependabot updates
-#        if: (github.actor == 'dependabot[bot]' || github.actor == 'darthtrevino') && contains(github.ref, 'dependabot/npm_and_yarn')
-#        uses: ridedott/merge-me-action@v1
-#        with:
-#          # This must be used as GitHub Actions token does not support
-#          # pushing to protected branches.
-#          GITHUB_LOGIN: darthtrevino
-#          GITHUB_TOKEN: ${{ secrets.AUTOMERGE_PAT }}
