Restore CommonJS Output (#3369)
* fix: add .js extensions to dnd-coer files

* fix: build cjs/esm across the project

* build: use esm/cjs across workspace

* test: add module export tests to build

* chore: semver

* build: update formatting script to handle new extensions

--- a/package.json
+++ b/package.json
@@ -40,17 +40,20 @@
     "clean:": "yarn workspaces foreach --exclude @react-dnd/build -pv run clean",
     "build:": "yarn workspaces foreach -pv --topological-dev run build",
     "test:": "yarn workspaces foreach -pv run test",
+    "modules:cjs": "node ./module_test/cjs-imports.cjs",
+    "modules:mjs": "node ./module_test/mjs-imports.mjs",
+    "modules:": "run-s 'modules:*'",
     "release:": "yarn workspaces foreach -pv --exclude 'react-dnd-parent' --exclude '@react-dnd/build' --exclude 'react-dnd-documentation' --exclude 'react-dnd-examples' -pv npm publish --tolerate-republish",
     "lint:": "run-s 'lint:*'",
-    "jest:": "jest --coverage",
+    "jest:": "yarn node --experimental-vm-modules $(yarn bin jest) --coverage",
     "lint:code": "eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:spelling": "mdspell 'packages/documentation/docsite/markdown/**/*.md' --en-us --report",
     "lint:tone": "alex .",
-    "lint:formatting": "prettier --check \"**/*.(ts|tsx|js|json|md)\"",
+    "lint:formatting": "prettier --check \"**/*.(ts|tsx|js|json|md|cjs|mjs|cts|mts)\"",
     "build_docsite": "yarn build:docsite",
-    "format:": "prettier --write \"**/*.(ts|tsx|js|json|md)\"",
+    "format:": "prettier --write \"**/*.(ts|tsx|js|json|cjs|mjs|cts|mts)\"",
     "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0",
-    "ci": "run-s build: test: lint: jest: build_docsite git-is-clean",
+    "ci": "run-s build: test: lint: jest: modules: build_docsite git-is-clean",
     "precommit": "lint-staged",
     "git-is-clean": "git status && git diff-index HEAD"
   },
@@ -74,6 +77,7 @@
     "@typescript-eslint/parser": "^5.10.1",
     "alex": "^9.1.0",
     "conventional-changelog-cli": "^2.1.1",
+    "dnd-core": "workspace:packages/dnd-core",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
