--- a/packages/dnd-core/package.json
+++ b/packages/dnd-core/package.json
@@ -9,7 +9,10 @@
   "sideEffects": false,
   "scripts": {
     "clean": "shx rm -rf dist/",
-    "build": "tsc -b tsconfig.cjs.json && tsc -b tsconfig.esm.json && tsc -b tsconfig.types.json"
+    "build_types": "tsc -b .",
+    "build_esm": "swc -C module.type=es6 -d dist/esm src/",
+    "build_cjs": "swc -C module.type=commonjs -d dist/cjs src/",
+    "build": "run-s build_types build_esm build_cjs"
   },
   "repository": {
     "type": "git",
@@ -21,7 +24,10 @@
     "redux": "^4.1.1"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.55",
+    "@swc/core": "^1.2.136",
     "@types/setimmediate": "^1.0.2",
+    "npm-run-all": "^4.1.5",
     "react-dnd-test-backend": "portal:../backend-test",
     "setimmediate": "^1.0.5",
     "shx": "^0.3.4",
