--- a/packages/react-dnd/package.json
+++ b/packages/react-dnd/package.json
@@ -13,7 +13,10 @@
   "license": "MIT",
   "scripts": {
     "clean": "shx rm -rf dist/",
-    "build": "tsc -b tsconfig.cjs.json && tsc -b tsconfig.esm.json && tsc -b tsconfig.types.json"
+    "build_types": "tsc -b .",
+    "build_esm": "swc -C module.type=es6 -d dist/esm src/",
+    "build_cjs": "swc -C module.type=commonjs -d dist/cjs src/",
+    "build": "run-s build_types build_esm build_cjs"
   },
   "dependencies": {
     "@react-dnd/invariant": "^2.0.0",
@@ -23,11 +26,14 @@
     "hoist-non-react-statics": "^3.3.2"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.55",
+    "@swc/core": "^1.2.136",
     "@testing-library/react": "^12.1.2",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/node": "^14.17.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dnd-test-backend": "portal:../backend-test",
     "react-dnd-test-utils": "portal:../test-utils",
