--- a/packages/dnd-core/.swcrc
+++ b/packages/dnd-core/.swcrc
@@ -7,7 +7,10 @@
 			"tsx": true
 		},
 		"transform": {
-			"react": { "runtime": "automatic", "useBuiltins": true }
+			"react": {
+				"runtime": "automatic",
+				"useBuiltins": true
+			}
 		}
 	}
 }
