--- a/packages/react-dnd/tsconfig.json
+++ b/packages/react-dnd/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "emitDeclarationOnly": true,
+    "outDir": "dist/types"
   },
   "include": ["./src/index.ts"]
 }
