Add Create-React-App Test Suite (#3374)
* feat: add cra-based test app

* chore: update yarn lock

* chore: semver

* chore: disable eslint in cra-tester

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -15,6 +15,9 @@ packageExtensions:
     dependencies:
       "@babel/types": ^7.12.0
       babel-plugin-styled-components: ^1.11.1
+  babel-preset-react-app@*:
+    dependencies:
+      "@babel/plugin-proposal-private-property-in-object": "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
