Add Next.JS App Tester Package (#3384)
* test: add Next.JS tester app

* chore: add .next to eslintignore, prettierignore

* build: update changesetIgnorePatterns

* chore: move @react-dnd/invariant to this monorepo

* refactor: inline the shallowEqual utility in react-dnd

* refactor: add util-asap to monorepo

* refactor: build updates

* chore: cut semver

* chore: update semver

* refactor: remove node asap implementation

* refactor: clean up asap; fix a regression example

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,7 @@
 changesetIgnorePatterns:
   - "**/*.spec.{js,ts,tsx}"
   - packages/docsite/**
-  - packages/build/**
+  - packages/test-suite-*/**
 
 enableInlineHunks: true
 
