--- a/packages/util-shallowequal/package.json
+++ b/packages/util-shallowequal/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "dnd-core",
-  "version": "15.1.0",
-  "description": "Drag and drop sans the GUI",
+  "name": "@react-dnd/shallowequal",
+  "version": "2.0.0",
+  "description": "Like lodash isEqualWith but for shallow equal.",
+  "keywords": [
+    "shallowequal",
+    "shallow",
+    "equal",
+    "isequal",
+    "compare",
+    "isequalwith"
+  ],
   "license": "MIT",
+  "author": {
+    "name": "Alberto Leal",
+    "email": "mailforalberto@gmail.com",
+    "url": "https://github.com/dashed"
+  },
+  "repository": "https://github.com/react-dnd/react-dnd",
+  "main": "dist/cjs/index.js",
+  "types": "dist/types/index.d.ts",
   "exports": {
     "import": "./dist/esm/index.mjs",
     "require": "./dist/cjs/index.js",
     "types": "./dist/types/index.d.ts"
   },
-  "main": "dist/cjs/index.js",
-  "types": "dist/types/index.d.ts",
-  "sideEffects": false,
   "scripts": {
     "clean": "shx rm -rf dist/",
     "build_types": "tsc -b .",
@@ -19,23 +32,12 @@
     "esm_hack": "node ../../scripts/esmify.mjs",
     "build": "run-s build_types build_esm build_cjs esm_hack"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/react-dnd/react-dnd.git"
-  },
-  "dependencies": {
-    "@react-dnd/asap": "workspace:packages/util-asap",
-    "@react-dnd/invariant": "workspace:packages/util-invariant",
-    "redux": "^4.1.1"
-  },
   "devDependencies": {
     "@swc/cli": "^0.1.55",
     "@swc/core": "^1.2.136",
-    "@types/jest": "^27.4.0",
-    "@types/setimmediate": "^1.0.2",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^17.0.15",
     "npm-run-all": "^4.1.5",
-    "react-dnd-test-backend": "portal:../backend-test",
-    "setimmediate": "^1.0.5",
     "shx": "^0.3.4",
     "typescript": "^4.5.5"
   }
