--- a/packages/react-dnd/package.json
+++ b/packages/react-dnd/package.json
@@ -24,8 +24,8 @@
     "build": "run-s build_types build_esm build_cjs esm_hack"
   },
   "dependencies": {
-    "@react-dnd/invariant": "^2.0.0",
-    "@react-dnd/shallowequal": "^2.0.0",
+    "@react-dnd/invariant": "workspace:packages/util-invariant",
+    "@react-dnd/shallowequal": "workspace:packages/util-shallowequal",
     "dnd-core": "workspace:packages/dnd-core",
     "fast-deep-equal": "^3.1.3",
     "hoist-non-react-statics": "^3.3.2"
