--- a/packages/util-asap/package.json
+++ b/packages/util-asap/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@react-dnd/asap",
   "version": "4.0.0",
+  "private": false,
   "description": "High-priority task queue for Node.js and browsers",
   "keywords": [
     "event",
