--- a/packages/util-shallowequal/package.json
+++ b/packages/util-shallowequal/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@react-dnd/shallowequal",
   "version": "3.0.0",
+  "private": false,
   "description": "Like lodash isEqualWith but for shallow equal.",
   "keywords": [
     "shallowequal",
