--- a/package.json
+++ b/package.json
@@ -60,24 +60,24 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@swc/core": "^1.2.163",
+    "@swc/core": "^1.2.168",
     "@swc/jest": "^0.2.20",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.0",
-    "@tsconfig/strictest": "^1.0.0",
+    "@testing-library/react": "^13.1.1",
+    "@tsconfig/strictest": "^1.0.1",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "@types/testing-library__jest-dom": "^5.14.3",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "conventional-changelog-cli": "^2.1.1",
     "dnd-core": "workspace:^",
-    "eslint": "^8.12.0",
+    "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
@@ -85,7 +85,7 @@
     "husky": "^7.0.4",
     "inquirer": "^7.3.3",
     "jest": "~27.5.1",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "^12.3.8",
     "markdown-spellcheck": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
@@ -100,5 +100,9 @@
   "packageManager": "yarn@3.2.0",
   "dependencies": {
     "eslint-plugin-simple-import-sort": "^7.0.0"
+  },
+  "resolutions": {
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1"
   }
 }
