--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "outDir": "dist",
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "noImplicitOverride": false
   },
   "include": ["./src/index.ts"]
 }
