--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
-    "preinstall": "npx only-allow yarn && yarn husky install",
+    "postinstall": "yarn husky install",
     "clean:": "yarn workspaces foreach --exclude @react-dnd/build -pv run clean",
     "build:": "yarn workspaces foreach -pv --topological-dev run build",
     "test:": "yarn workspaces foreach -pv run test",
@@ -52,54 +52,54 @@
     "changelog": "conventional-changelog -p eslint -i CHANGELOG.md -s -r 0",
     "ci": "run-s build: test: lint: jest: modules: build_docsite git-is-clean",
     "precommit": "lint-staged",
-    "git-is-clean": "git status && git diff-index HEAD"
+    "git-is-clean": "git status && git diff-index HEAD",
+    "update_sdks": "yarn dlx @yarnpkg/sdks vscode"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@swc/core": "^1.2.168",
-    "@swc/jest": "^0.2.20",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@tsconfig/strictest": "^1.0.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.25",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
-    "@types/testing-library__jest-dom": "^5.14.3",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "conventional-changelog-cli": "^2.1.1",
+    "@swc/core": "^1.3.23",
+    "@swc/jest": "^0.2.24",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@tsconfig/strictest": "^1.0.2",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.16",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "conventional-changelog-cli": "^2.2.2",
     "dnd-core": "workspace:^",
-    "eslint": "^8.13.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "husky": "^7.0.4",
-    "inquirer": "^7.3.3",
-    "jest": "~27.5.1",
-    "lint-staged": "^12.3.8",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.2",
+    "inquirer": "^9.1.4",
+    "jest": "~29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "markdown-spellcheck": "^1.3.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.1",
     "react-dnd": "workspace:^",
     "react-dnd-examples": "workspace:^",
     "react-dnd-html5-backend": "workspace:^",
     "react-dnd-test-backend": "workspace:^",
     "react-dnd-test-utils": "workspace:^",
     "react-dnd-touch-backend": "workspace:^",
-    "typescript": "^4.6.3"
+    "typescript": "~4.8.4"
   },
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.3.0",
   "dependencies": {
-    "eslint-plugin-simple-import-sort": "^7.0.0"
+    "eslint-plugin-simple-import-sort": "^8.0.0"
   },
   "resolutions": {
     "@types/react": "18.0.5",
