--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -27,24 +27,24 @@
     "lodash": "^4.17.21",
     "react-dnd": "workspace:^",
     "react-dnd-html5-backend": "workspace:^",
-    "react-frame-component": "^5.2.1"
+    "react-frame-component": "^5.2.3"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.168",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@swc/core": "^1.3.23",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/faker": "^5.5.9",
-    "@types/jest": "^27.4.1",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.25",
-    "@types/react": "^18.0.5",
-    "jest-mock": "^27.5.1",
+    "@types/jest": "^29.2.4",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.16",
+    "@types/react": "^18.0.26",
+    "jest-mock": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "react": "^18.0.0",
     "react-dnd-test-utils": "workspace:^",
     "shx": "^0.3.4",
-    "typescript": "^4.6.3"
+    "typescript": "~4.8.4"
   },
   "peerDependencies": {
     "@types/node": ">= 12",
