--- a/packages/react-dnd/package.json
+++ b/packages/react-dnd/package.json
@@ -26,22 +26,22 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.168",
-    "@testing-library/react": "^13.1.1",
+    "@swc/core": "^1.3.23",
+    "@testing-library/react": "^13.4.0",
     "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.25",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
-    "jest": "^27.5.1",
-    "jest-mock": "^27.5.1",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.16",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "jest": "^29.3.1",
+    "jest-mock": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "react": "^18.0.0",
     "react-dnd-test-backend": "portal:../backend-test",
     "react-dnd-test-utils": "portal:../test-utils",
     "react-dom": "^18.0.0",
     "shx": "^0.3.4",
-    "typescript": "^4.6.3"
+    "typescript": "~4.8.4"
   },
   "peerDependencies": {
     "@types/hoist-non-react-statics": ">= 3.3.1",
