--- a/packages/util-asap/package.json
+++ b/packages/util-asap/package.json
@@ -23,11 +23,11 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.168",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.25",
+    "@swc/core": "^1.3.23",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.16",
     "npm-run-all": "^4.1.5",
     "shx": "^0.3.4",
-    "typescript": "^4.6.3"
+    "typescript": "~4.8.4"
   }
 }
