Add commonjs files to the dist output (#3526)
* fix: add commonjs files to the dist output

* fix: remove version bumps, remove 'type': 'module'

* semver

* remove add_pkgjson script

* restore createDistPkg script

* minor cleanups in createDistPkgJson

* run formatter

* add cjs tester

* get tests running

* update version-check task

Co-authored-by: Richie <ricsam@users.noreply.github.com>
Co-authored-by: Chris Trevino <darthtrevino@gmail.com>

--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -5,7 +5,7 @@ env:
 jobs:
   version-check:
     runs-on: ubuntu-latest
-    if: "github.ref != 'main' &&  github.head_ref != 'main' && !contains(github.ref , 'release/') && !contains(github.head_ref , 'release/') && !contains(github.ref , 'dependabot/') && !contains(github.head_ref , 'dependabot/')"
+    if: "!contains(github.ref , 'release/') && !contains(github.head_ref , 'release/')"
     steps:
       - uses: actions/checkout@v3
         with:
