--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   },
   "homepage": "https://github.com/react-dnd/react-dnd",
   "scripts": {
+    "_modules_esm": "node ./module_test/mjs-imports.mjs",
+    "_modules_cjs": "node ./module_test/cjs-imports.cjs",
     "postinstall": "yarn husky install",
-    "clean:": "yarn workspaces foreach --exclude @react-dnd/build -pv run clean",
+    "clean:": "yarn workspaces foreach -pv run clean",
     "build:": "yarn workspaces foreach -pv --topological-dev run build",
     "test:": "yarn workspaces foreach -pv run test",
-    "modules:": "node ./module_test/mjs-imports.mjs",
-    "release:": "yarn workspaces foreach -pv --exclude 'react-dnd-parent' --exclude '@react-dnd/build' --exclude 'react-dnd-documentation' --exclude 'react-dnd-examples' --exclude 'test-suite-*' -pv npm publish --tolerate-republish --access public",
+    "modules:": "run-s _modules_esm _modules_cjs",
+    "release:": "yarn workspaces foreach -pv --exclude 'react-dnd-parent' --exclude 'react-dnd-documentation' --exclude 'react-dnd-examples' --exclude 'test-suite-*' -pv npm publish --tolerate-republish --access public",
     "lint:": "run-s 'lint:*'",
     "jest:": "NODE_OPTIONS=--experimental-vm-modules yarn node $(yarn bin jest) --coverage",
     "lint:code": "eslint . --ext .js,.jsx,.mjs,.cjs,.ts,.tsx,.cts,.mts --fix",
