--- a/packages/backend-touch/package.json
+++ b/packages/backend-touch/package.json
@@ -2,9 +2,15 @@
   "name": "react-dnd-touch-backend",
   "version": "16.0.1",
   "description": "Touch backend for react-dnd",
-  "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.mjs",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.mjs"
+    }
+  },
   "sideEffects": false,
   "license": "MIT",
   "author": "Long Ho <holevietlong@gmail.com>",
@@ -14,9 +20,11 @@
   },
   "scripts": {
     "clean": "shx rm -rf dist/",
-    "build_types": "tsc -b .",
-    "build_esm": "swc -C module.type=es6 -d dist src/",
-    "build": "run-s build_types build_esm"
+    "build_dts": "tsc -b .",
+    "build_esm": "swc -C module.type=es6 -d dist/esm src/",
+    "build_cjs": "swc -C module.type=commonjs -d dist/cjs src/",
+    "prepare_esm": "node ../../scripts/esmify.mjs",
+    "build": "npm-run-all -p build_dts build_esm build_cjs -s prepare_esm"
   },
   "dependencies": {
     "@react-dnd/invariant": "workspace:^",
