--- a/packages/util-asap/tsconfig.json
+++ b/packages/util-asap/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "emitDeclarationOnly": true,
-    "outDir": "dist",
+    "outDir": "./dist/types",
     "types": ["node", "jest"]
   },
   "include": ["./src"]
